--- a/app/views/pages/deadly-bayou.html.haml
+++ b/app/views/pages/deadly-bayou.html.haml
@@ -4,6 +4,6 @@
 	- if alert
 		%p.error= alert
 	%h1 Deadly Bayou
-	%p Check back later in the year for a preview of the Saul and Jayne’s next book, Deadly Bayou.
+	%p Check back later in the year for a preview of the Saul and Jayne’s next adventure, Deadly Bayou.
 
 = render "partials/dbside_add"
