--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -4,10 +4,10 @@
 	- if alert
 		%p.error= alert
 	%h1 Welcome
-	%p If you’re ready <i>for an exciting read then dive into Deadly Memories, S. D. O’Donnell’s debut psychological suspense novel. Turn off the phone and close door – you might not want to put the book down.</i>
-	%p Please <i>spend a few minutes browsing these pages to learn more about me or read an except from the book. Check out News & Events to keep up with the latest on my work and read industry news.</i>
-	%p Add your name to my mailing list and I’ll let you <i>know the latest news as it’s available. That includes a notice on when the preview of Deadly Bayou is ready.</i>
-	%p I’ll be posting a copy of the <i>blues song referenced in the book: Last Day, by Delta Deon Slade. You can’t hear it anywhere but here and you’ll know right away when it’s up if you’re on my mailing list.</i>
+	%p If you’re ready for an exciting read, then dive into <i>Deadly Memories</i>, S.D. O’Donnell’s debut psychological suspense novel. Turn off the phone and close door – you might not want to put the book down.
+	%p Please spend a few minutes browsing these pages to learn more about me or read an except from the book. Check out News & Events to keep up with my work and to read news from the publishing industry.
+	%p Add your name to my mailing list and I’ll let you know the latest as it’s available. That includes a notice on when the preview for my next book, <i>Deadly Bayou</i>, is ready.
+	%p I’ll be posting a copy of the blues song referenced in the book: Last Day, by Delta Deon Slade. You can’t hear it anywhere but here and you’ll know right away when it’s up if you’re on my mailing list.
 	= render "partials/mailing_exerpt"
 
 = render "partials/dbside_add"
