--- a/app/views/partials/_mailing_exerpt.html.erb
+++ b/app/views/partials/_mailing_exerpt.html.erb
@@ -1,1 +1,1 @@
-<p>Click <%=  link_to_modal "here", "#mailing-list-signup" %> or the button to the right to join S. D. O’Donnell’s mailing list and get the latest news.</p>
+<p>Click <%=  link_to_modal "here", "#mailing-list-signup" %> or the button to the right to sign up.</p>
