--- a/app/views/partials/_dbside_add.html.haml
+++ b/app/views/partials/_dbside_add.html.haml
@@ -2,9 +2,9 @@
 	.social
 		= link_to "http://www.facebook.com/pages/S-D-ODonnell/251731921625102" do
 			= image_tag "facebook.png"
-		= link_to "http://www.facebook.com/pages/S-D-ODonnell/251731921625102" do
-			= image_tag "goodreads.png"
+		-# = link_to "http://www.facebook.com/pages/S-D-ODonnell/251731921625102" do
+		-# 	= image_tag "goodreads.png"
 	= image_tag "DeadlyMemories.png", id: "deadly-memories"
-	= link_to "#" do
+	= link_to "http://www.amazon.com/Deadly-Memories-S-D-ODonnell/dp/0988455609/ref=sr_1_5?s=books&ie=UTF8&qid=1359324537&sr=1-5&keywords=deadly+memories" do
 		.button Buy Now
 	= render "modals/mailing_list_signup"
