--- a/app/views/pages/biography.html.haml
+++ b/app/views/pages/biography.html.haml
@@ -5,6 +5,6 @@
 		%p.error= alert
 	%h1 Biography
 	%p S.D. O’Donnell has a degree in Languages (German and English) and has worked as a free-lance author, a technical writer, a business consultant, and a multi-media producer. After many years in the business world, she decided to try her hand at her first love: writing fiction. The end result of that journey is the novel Deadly Memories.
-	%p She knows she’s done something unusual in writing from a male point of view but believes herself to be well-qualified. Her house is the gathering grounds for her former-Special Forces husband and his contingent of buddies (many of them former military, too). She gives them food and drink, all the while observing what she considers her private laboratory of male behavior.
+	%p <b>S.D. O'Donnell's view on her writing style:</b> "I know I've done something unusual in writing from a male point of view but believe myself to be well-qualified to do so. My house is the gathering grounds for my former-Special Forces husband and his contingent of buddies (many of them former military, too). I give them food and drink, all the while observing what I consider my private research laboratory of male behavior."
 
 = render "partials/dbside_add"
