--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -4,6 +4,8 @@
 	- if alert
 		%p.error= alert
 	%h1 Contact
+	%p Contact me at <a href"mailto:sd@sdodonnell.com">sd@sdodonnell.com</a>  or share your thoughts, questions, or comments in the form below.
+	%p I look forward to hearing from you. Thanks for checking out my site and I hope you enjoy <i>Deadly Memories</i>.
 	= simple_form_for @contact do |f|
 		= f.input :name
 		= f.input :email
