--- a/app/views/main_mailer/confirm_signup_email.html.erb
+++ b/app/views/main_mailer/confirm_signup_email.html.erb
@@ -1,5 +1,5 @@
 <p>Hello <%= @subscriber.name %>,</p>
-<p>Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns the email. To confirm simply click the link bellow and you will begin reseaving updates about my work.</p>
+<p>Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns this email. To confirm simply click the link bellow and you will begin reseaving updates about my work.</p>
 <p>
-<%= link_to "Confirm", confirm_subscriber_url( @subscriber.key ) %>
+<a href="http://www.sdodonnell.com/subscribers/confirm/<%= @subscribers.key %>">Confirm</a>
 </p>
