--- a/app/views/partials/_nav.html.haml
+++ b/app/views/partials/_nav.html.haml
@@ -5,7 +5,7 @@
 		-# %li{class: ("active" if active?('press'))}= link_to "Press Kit", '/press-kit'
 		%li{class: ("active" if active?('dmbook'))}= link_to "Deadly Memories", 'deadly-memories'
 		%li{class: ("active" if active?('dbbook'))}= link_to "Deadly Bayou", '/deadly-bayou'
-		%li{class: ("active" if active?('news'))}= link_to "New & Events", 'news-events'
+		%li{class: ("active" if active?('news'))}= link_to "News & Events", 'news-events'
 		%li{class: ("active" if active?('resources'))}= link_to "Resources", 'resources'
 		%li{class: ("active" if active?('contact'))}= link_to "Contact", 'contact'
 		-# %li{class: ("active" if active?('buy'))}= link_to "Buy", 'buy'
