--- a/app/views/main_mailer/confirm_signup_email.text.erb
+++ b/app/views/main_mailer/confirm_signup_email.text.erb
@@ -1,6 +1,6 @@
 Hello <%= @subscriber.name %>,
 
-Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns the email. To confirm, simply click the link bellow and you will begin receiving updates about my work.
+Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns the email. To confirm, simply click the link below and you will begin receiving updates about my work.
 
 Sorry. Your email doesn't support HTML. Please coppy and paste the link below to you browser in order to subscribe.
 http://sdodonnell.com/subscribers/confirm/<%= @subscriber.key %>
