--- a/app/views/main_mailer/confirm_signup_email.html.erb
+++ b/app/views/main_mailer/confirm_signup_email.html.erb
@@ -1,5 +1,5 @@
 <p>Hello <%= @subscriber.name %>,</p>
-<p>Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns this email. To confirm, simply click the link bellow and you will begin receiving updates about my work.</p>
+<p>Thank you for your interest in my work. I need to confirm that you (the person who signed up for the mailing list) actually owns this email. To confirm, simply click the link below and you will begin receiving updates about my work.</p>
 <p>
 <a href="http://sdodonnell.com/subscribers/confirm/<%= @subscriber.key %>">Confirm</a>
 </p>
