--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -12,10 +12,10 @@
 		#container
 
 			#header
-				%h1#author S.D. O'Donnell
-				%p#author_small AUTHOR
+				%h1#author Mom's Awesome Comand Center
+				%p#author_small (: Love Tyrel :)
 				= render 'partials/login'
-			= render 'partials/nav'
+			= render 'partials/admin_nav'
 
 			= yield
 
