--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -34,6 +34,8 @@
 body.bp.two-col {
 	font-family: ambleregular;
 	background-color: rgb(7,7,7);
+	background-image: url(background.png);
+  background-repeat: repeat, repeat;
 	@include base-font-color;
 	h3 {
 		color: #BCBDC0;
@@ -76,7 +78,7 @@ body.bp.two-col {
 		top: 270px;
 		ul {
 			position: absolute;
-			left: 100px;
+			left: 57px;
 			li {
 				position: relative;
 				top: 3px;
@@ -86,7 +88,7 @@ body.bp.two-col {
 				font-weight: bold;
 				color: white;
 				float: left;
-				min-width: 70px;
+				min-width: 65px;
 				text-align:center;
 				a {
 					color: white;
@@ -284,4 +286,57 @@ form {
 }
 #magazine .turn-page{
     background-color:#ccc;
+}
+
+#user_nav {
+	font-size: 14px;
+	color: white;
+	a {
+		color: white;
+	}
+}
+
+form {
+	.editor {
+		position: relative;
+		left: 30px;
+	}
+}
+
+.fullspan {
+	width: 90%;
+	margin: auto;
+}
+
+.blog-entry {
+	.image{
+		float: left;
+		margin: 3px;
+		margin-right: 30px;
+	}
+	h1 {
+		color: black !important;
+		font-size: 42px !important;
+		text-decoration: none;
+	}
+	a.plain {
+		text-decoration: none;
+		color: black;
+	}
+}
+
+.heading {
+	text-align: center;
+	color: black !important;
+	font-size: 50px !important;
+}
+
+.back-to-index {
+	padding: 0 17px;
+	.left {
+		float: left;
+	}
+	.right {
+		float: right;
+	}
 }
