--- a/app/views/partials/_dbside_add.html.haml
+++ b/app/views/partials/_dbside_add.html.haml
@@ -4,6 +4,8 @@
 			= image_tag "facebook.png"
 		= link_to "http://www.goodreads.com/author/show/6910544.S_D_O_Donnell" do
 			= image_tag "goodreads.png"
+		= link_to "/feed.atom" do
+			= image_tag "feed.jpg"
 	= image_tag "DeadlyMemories.png", id: "deadly-memories"
 	= link_to "http://www.amazon.com/Deadly-Memories-S-D-ODonnell/dp/0988455609/ref=sr_1_5?s=books&ie=UTF8&qid=1359324537&sr=1-5&keywords=deadly+memories" do
 		.button Buy Now
