--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,8 @@
 		= javascript_include_tag :application
 		= csrf_meta_tag
 		= stylesheet_link_tag :application
-
+		= auto_discovery_link_tag :atom, "/feed"
+		= auto_discovery_link_tag :rss, "/feed.rss"
 	%body.bp.two-col
 
 		#container
