--- a/app/views/partials/_admin_nav.html.haml
+++ b/app/views/partials/_admin_nav.html.haml
@@ -1,3 +1,5 @@
 #nav
 	%ul
 		%li{class: ("active" if active?('home'))}= link_to "Social/Blog", new_blog_path
+		%li{class: ("active" if active?('home'))}= link_to "Events", new_event_path
+		%li{class: ("active" if active?('home'))}= link_to "Mailer", "#"
