--- a/app/views/partials/_admin_nav.html.haml
+++ b/app/views/partials/_admin_nav.html.haml
@@ -2,4 +2,4 @@
 	%ul
 		%li{class: ("active" if active?('home'))}= link_to "Social/Blog", new_blog_path
 		%li{class: ("active" if active?('home'))}= link_to "Events", new_event_path
-		%li{class: ("active" if active?('home'))}= link_to "Mailer", "#"
+		%li{class: ("active" if active?('home'))}= link_to "Mailer", compose_subscribers_path
