--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,12 +1,13 @@
 = simple_form_for @event do |f|
 	%h3 Event Description
-	.editor
-		= f.text_area :heading, :class => "tinymce"
+	- @event.heading ||= ""
+	%p= "Hey mom you can add italics with <i>I will be italisized</i> and bold like <b>I am a bold statment</b>"
+	%p Any HTML tags will work including images and links if you need them you should be a google search away like html tag for hyperlink
+	%p= "I built a system where all breaks will be persisted so if you hit enter it will create an html <br /> tag"
+	= f.text_area :heading, value: @event.heading.gsub("<br />", "\n")
 	= f.input :date, as: :date
 	%br
 	- if @event.created_at
 		= f.submit "Update Event"
 	- else
 		= f.submit "Create Event"
-
-= tinymce
