--- a/app/views/partials/_dbside_add.html.haml
+++ b/app/views/partials/_dbside_add.html.haml
@@ -6,6 +6,7 @@
 			= image_tag "goodreads.png"
 		= link_to "/feed.atom" do
 			= image_tag "feed.jpg"
+	= image_tag "indie.png", id: "indie"
 	= image_tag "DeadlyMemories.png", id: "deadly-memories"
 	= link_to "http://www.amazon.com/Deadly-Memories-S-D-ODonnell/dp/0988455609/ref=sr_1_5?s=books&ie=UTF8&qid=1359324537&sr=1-5&keywords=deadly+memories" do
 		.button Buy Now
